# hsr_pybullet

./: .gitignore  README.md  env_utils.py  eval_agent.py  eval_seg.py  fcn_model.py  gen_data.py  gen_segdata.py  hsr_env.py  instance_post_processing.py  main.py  plot_scores.py  pose.py  pretrain.py  resnet.py  sanity.py  train_agent.py  train_fcn.py  train_segnet.py  weights_010.p
hsrb_description/: CHANGELOG.rst  CMakeLists.txt  README.rst  mainpage.dox  package.xml
hsrb_description/.git.bak/: config  index  packed-refs
hsrb_description/.git.bak/logs/refs/heads/: master
hsrb_description/.git.bak/refs/heads/: master
hsrb_description/config/: hsrb4s_collision_test.yaml
hsrb_description/launch/: hsrb_display.launch  hsrb_display.rviz
hsrb_description/robots/: collision_pair_hsrb.xml  hsrb.urdf  hsrb4s.urdf  hsrb4s.urdf.xacro  upload_hsrb.launch
hsrb_description/test/: test_urdf.py
hsrb_description/urdf/: common.xacro  materials.urdf.xacro
hsrb_description/urdf/arm_v0/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
hsrb_description/urdf/base_v2/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
hsrb_description/urdf/hand_v0/: hand.gazebo.xacro  hand.transmission.xacro  hand.urdf.xacro
hsrb_description/urdf/head_v2/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
hsrb_description/urdf/sensors/: asus_xtion.gazebo.xacro  asus_xtion.urdf.xacro  hokuyo_laser.gazebo.xacro  hokuyo_laser.urdf.xacro  imu.urdf.xacro  intel_d435.gazebo.xacro  intel_d435.urdf.xacro  minebea_ft_sensor.gazebo.xacro  minebea_ft_sensor.urdf.xacro  mynteye.gazebo.xacro  mynteye.urdf.xacro  mynteye_imu.urdf.xacro  pointgrey_chameleon.gazebo.xacro  pointgrey_chameleon.urdf.xacro  sensors.xacro  wide_camera.gazebo.xacro  wide_camera.urdf.xacro
hsrb_description/urdf/torso_v0/: torso.gazebo.xacro  torso.urdf.xacro
hsrb_description/urdf/wrist_v0/: wrist.gazebo.xacro  wrist.transmission.xacro  wrist.urdf.xacro
hsrb_meshes/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
hsrb_meshes/.git.bak/: config  index  packed-refs
hsrb_meshes/.git.bak/refs/heads/: master
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/: CMakeLists.txt
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/trofast/: model-1_4.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/trofast_knob/: model-1_4.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bin_black/: model.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bin_green/: model.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_bookshelf/: model.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/models/wrc_container_a/: model.sdf
tmc_wrs_gazebo/tmc_wrs_gazebo_worlds/worlds/: wrs2020.world.xacro
(+7 files in other folders)
